--- a/notebooks/jupyter/OSM_Python_Query.ipynb
+++ b/notebooks/jupyter/OSM_Python_Query.ipynb
@@ -415,9 +415,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -429,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
