--- a/notebooks/jupyter/OSM_Python_Query.ipynb
+++ b/notebooks/jupyter/OSM_Python_Query.ipynb
@@ -189,7 +189,7 @@
     "#                 tags = dict ... get names\n",
     "                \n",
     "                \n",
-    "# nest = response_dict['Chad']['elements'][1]['tags']['name:en'] # return name value \n",
+    "nest = response_dict['Chad']['elements'][1]['tags']['name:en'] # return name value \n",
     "# type(nest)\n",
     "# nest"
    ]
