--- a/notebooks/jupyter/Raster_Mask.ipynb
+++ b/notebooks/jupyter/Raster_Mask.ipynb
@@ -22,8 +22,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Raster Mask\n",
+    "\n",
+    "This notebook contains analysis and visualizations for:\n",
+    "\n",
+    "1. Loading a geotiff file into python \n",
+    "2. Masking rasters at set thresholds \n",
+    "\n",
+    "Updated: 2018-11-21"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,45 +57,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 1 - Input file\n",
+    "\n",
+    "    - Becomes a rasterio object, check meta data \n",
+    "    - Bands are numpy arrays"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# will build out folders later\n",
     "\n",
     "# data folder git will ignore\n",
-    "# infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" \n",
+    "# infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
+    "# outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
     "\n",
-    "# data folder git will not ignore - NO BIG FILES \n",
-    "# outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# when work on local computer\n",
-    "\n",
+    "# Local computer \n",
     "infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
     "outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Step 1 - Input file\n",
-    "\n",
-    "    Becomes a rasterio object, check meta data \n",
-    "    Bands are numpy arrays"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +100,8 @@
     }
    ],
    "source": [
+    "# Need to build function to loop through files\n",
+    "\n",
     "africa1k_2000 = rasterio.open(infilepath+\"AFR_PPP_2000_adj_v2.tif\") #<----- changes to 2020 18/13/11 @ 2pm \n",
     "print(africa1k_2000.meta)\n",
     "\n",
@@ -104,30 +110,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "africa1k_2000.africa1k_2000"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2 - Make a mask\n",
-    "\n",
-    "    Becomes a rasterio object, check meta data \n",
-    "    Bands are numpy arrays"
+    "# Step 2 - Make a mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "386.1003861003861\n"
+     ]
+    }
+   ],
    "source": [
+    "# Set density\n",
     "# https://www2.census.gov/geo/pdfs/reference/ua/Defining_Rural.pdf\n",
     "\n",
     "density = 1000/ 2.59 #density per sq km from sq mi\n",
@@ -136,110 +139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Let's try to make the mask directy with rasterio\n",
-    "checkpoint = time.time()\n",
     "\n",
-    "new_mask = africa1k_2000.read(1)\n",
-    "new_mask[new_mask < 600] = 0 #18-11-12 set w/ 600 people\n",
-    "new_mask[new_mask > 600] = 1 #18-11-12 set w/ 600 people\n",
-    "print(np.unique(new_mask)) # ensure that it's zeros and ones\n",
+    "def raster_mask(raster, band, density):\n",
+    "    \"\"\"Fucntion makes numpy array for of raster then applies mask.\n",
+    "    requires rasterio object, band number, and density as float on int \n",
+    "    returns dict of polygons and numpy mask\n",
+    "    \"\"\"\n",
     "\n",
-    "# plot.show(new_mask) # Sanity check \n",
-    "print('elasped time to do the quary:{}'.format(time.time() - checkpoint))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write out 600 ppl/km2 for QGIS\n",
-    "kwargs = africa1k_2000.meta\n",
-    "kwargs.update(dtype=rasterio.float32, count = 1)\n",
-    "\n",
-    "with rasterio.open(infilepath+'africa1k_2020_mask600.tif', 'w', **kwargs) as dst:\n",
-    "        dst.write_band(1, new_mask.astype(rasterio.float32))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dilate and Erode \n",
-    "With 3x3 kernal ... must be odd number to stay centered "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# With 3x3 kernal ... must be odd number to stay centered  \n",
-    "# try dilate, erode, open and close\n",
-    "\n",
-    "import cv2\n",
-    "\n",
-    "kernal = np.ones((3,3), np.uint8)\n",
-    "mask_dilated_close = cv2.morphologyEx(new_mask, cv2.MORPH_CLOSE, kernal)\n",
-    "mask_dilated_open = cv2.morphologyEx(new_mask, cv2.MORPH_OPEN, kernal)\n",
-    "mask_erode = cv2.erode(new_mask, kernal, iterations = 1)\n",
-    "mask_dilate = cv2.dilate(new_mask, kernal, iterations = 1)\n",
-    "\n",
-    "# write them out and check in QGIS\n",
-    "# ----------------> Need to do this without writing files <-----\n",
-    "kwargs = africa1k_2000.meta\n",
-    "\n",
-    "# Update kwargs (change in data type)\n",
-    "kwargs.update(dtype=rasterio.float32, count = 1)\n",
-    "\n",
-    "# Let's see what is in there\n",
-    "print(kwargs)\n",
-    "\n",
-    "# erode check\n",
-    "# with rasterio.open(infilepath+'africa1k_2020_maskErode.tif', 'w', **kwargs) as dst:\n",
-    "#         dst.write_band(1, mask_erode.astype(rasterio.float32))\n",
-    "\n",
-    "# dilate check \n",
-    "# with rasterio.open(infilepath+'africa1k_2020_maskDilate.tif', 'w', **kwargs) as dst:\n",
-    "#         dst.write_band(1, mask_dilate.astype(rasterio.float32)) \n",
+    "    mask = raster.read(band)\n",
+    "    mask[mask < density] = 0 # mask as zeros \n",
+    "    mask[mask >= density] = 1 \n",
+    "    \n",
+    "    # Extract feature shapes and values from the array.\n",
+    "    for geom, val in rasterio.features.shapes(mask, transform=raster.transform):\n",
     "        \n",
-    "# close raster check\n",
-    "# with rasterio.open(infilepath+'africa1k_2020_maskClose.tif', 'w', **kwargs) as dst:\n",
-    "#         dst.write_band(1, mask_dilated_close.astype(rasterio.float32))\n",
-    "\n",
-    "# open raster check        \n",
-    "# with rasterio.open(infilepath+'africa1k_2020_maskOpen.tif', 'w', **kwargs) as dst:\n",
-    "#         dst.write_band(1, mask_dilated_open.astype(rasterio.float32))\n",
-    "\n",
-    "#plot.show(mask_dilated)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Notes\n",
-    "- Dilate alone connects too many cites\n",
-    "- Erode alone may make too few cities\n",
-    "- Open greatly reduces the number of polygons but may be best for a conservitive estimate\n",
-    "- Close connects them and may make it difficult to attach the correct label with correct political boundaries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Step 3 - ShapeFiles"
+    "        # Transform shapes from the dataset's own coordinate\n",
+    "        # reference system to CRS84 (EPSG:4326).\n",
+    "        geom = rasterio.warp.transform_geom(raster.crs, 'EPSG:4326', geom, precision=6) # WGS84 (EPSG 4326)\n",
+    "    \n",
+    "    return mask, geom"
    ]
   },
   {
@@ -248,9 +173,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# open dialated mask and make some polygons\n",
-    "checkpoint = time.time()\n",
+    "mask, geom = raster_mask(africa1k_2000, 1, 600) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### to Cell write out mask as geotiff "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kwargs = africa1k_2000.meta\n",
+    "# kwargs.update(dtype=rasterio.float32, count = 1)\n",
     "\n",
+    "# with rasterio.open(infilepath+'africa1k_2020_mask600.tif', 'w', **kwargs) as dst:\n",
+    "#         dst.write_band(1, new_mask.astype(rasterio.float32))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 3 - Make Polygons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from rasterio import features as features\n",
     "\n",
     "with rasterio.open(infilepath+'africa1k_2020_mask600.tif') as dataset:\n",
@@ -1887,6 +1845,73 @@
     "label_test_num = label_test[1] # 96 polygons\n",
     "\n",
     "# no connectivity change 38377"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dilate and Erode \n",
+    "With 3x3 kernal ... must be odd number to stay centered "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# With 3x3 kernal ... must be odd number to stay centered  \n",
+    "# try dilate, erode, open and close\n",
+    "\n",
+    "# import cv2\n",
+    "\n",
+    "# kernal = np.ones((3,3), np.uint8)\n",
+    "# mask_dilated_close = cv2.morphologyEx(new_mask, cv2.MORPH_CLOSE, kernal)\n",
+    "# mask_dilated_open = cv2.morphologyEx(new_mask, cv2.MORPH_OPEN, kernal)\n",
+    "# mask_erode = cv2.erode(new_mask, kernal, iterations = 1)\n",
+    "# mask_dilate = cv2.dilate(new_mask, kernal, iterations = 1)\n",
+    "\n",
+    "# write them out and check in QGIS\n",
+    "# ----------------> Need to do this without writing files <-----\n",
+    "# kwargs = africa1k_2000.meta\n",
+    "\n",
+    "# Update kwargs (change in data type)\n",
+    "# kwargs.update(dtype=rasterio.float32, count = 1)\n",
+    "\n",
+    "# Let's see what is in there\n",
+    "# print(kwargs)\n",
+    "\n",
+    "# erode check\n",
+    "# with rasterio.open(infilepath+'africa1k_2020_maskErode.tif', 'w', **kwargs) as dst:\n",
+    "#         dst.write_band(1, mask_erode.astype(rasterio.float32))\n",
+    "\n",
+    "# dilate check \n",
+    "# with rasterio.open(infilepath+'africa1k_2020_maskDilate.tif', 'w', **kwargs) as dst:\n",
+    "#         dst.write_band(1, mask_dilate.astype(rasterio.float32)) \n",
+    "        \n",
+    "# close raster check\n",
+    "# with rasterio.open(infilepath+'africa1k_2020_maskClose.tif', 'w', **kwargs) as dst:\n",
+    "#         dst.write_band(1, mask_dilated_close.astype(rasterio.float32))\n",
+    "\n",
+    "# open raster check        \n",
+    "# with rasterio.open(infilepath+'africa1k_2020_maskOpen.tif', 'w', **kwargs) as dst:\n",
+    "#         dst.write_band(1, mask_dilated_open.astype(rasterio.float32))\n",
+    "\n",
+    "#plot.show(mask_dilated)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Notes\n",
+    "- Dilate alone connects too many cites\n",
+    "- Erode alone may make too few cities\n",
+    "- Open greatly reduces the number of polygons but may be best for a conservitive estimate\n",
+    "- Close connects them and may make it difficult to attach the correct label with correct political boundaries"
    ]
   }
  ],
