--- a/notebooks/jupyter/OSM_Python_Query.ipynb
+++ b/notebooks/jupyter/OSM_Python_Query.ipynb
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elasped time to do the quary:91.54471063613892\n"
+      "elasped time to do the quary:115.00480484962463\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "872"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,13 +259,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write out .csv\n",
-    " \n",
-    "# gps_df.to_csv(outfilepath+'20181112_osm_africa_cities.csv', sep=',', index=False, header=True)"
+    "\n",
+    "# NOTE - on 11-29-18 pulled 872 osm 'city' centroids w/o names to be used for AGU analysis \n",
+    "osm_cities.to_csv(outfilepath+'20181129_osm_africa_cities.csv', sep=',', index=False, header=True)"
    ]
   },
   {
@@ -328,18 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "68\n",
-      "64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### remove points without names\n",
     "\n",
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
