--- a/notebooks/jupyter/Raster_Mask.ipynb
+++ b/notebooks/jupyter/Raster_Mask.ipynb
@@ -32,12 +32,22 @@
     "    Go w/ former US Census threshold of >= 1000 ppl per sq mile\n",
     "    https://www2.census.gov/geo/pdfs/reference/GARM/Ch12GARM.pdf\n",
     "    \n",
-    "    http://blogs.worldbank.org/sustainablecities/what-does-urban-mean"
+    "    http://blogs.worldbank.org/sustainablecities/what-does-urban-mean\n",
+    "\n",
+    "### For AGU\n",
+    "    20181129_osm_africa_cities.csv - 872 'city' centroids from OSM\n",
+    "    Goals\n",
+    "        - w/ >1000 connect to >600 pixels \n",
+    "        - GRUMP v4 2000 & 2015\n",
+    "        - Worldpop 2000 & 2015\n",
+    "        - Drop doubled cities, ignore geometrics growth problem for now\n",
+    "        - Growth curves\n",
+    "        - Agro eco zones and countries "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,17 +96,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'driver': 'GTiff', 'dtype': 'float32', 'nodata': -3.4028234663852886e+38, 'width': 12575, 'height': 11161, 'count': 1, 'crs': CRS({'init': 'epsg:4326'}), 'transform': Affine(0.00833333329999305, 0.0, -33.3254172868223,\n",
+      "       0.0, -0.00833333329999305, 41.791250202105076)}\n"
+     ]
+    }
+   ],
    "source": [
     "# Need to build function to loop through files\n",
     "\n",
-    "africa1k_2000 = rasterio.open(infilepath+\"AFR_PPP_2000_adj_v2.tif\") #<----- changes to 2020 18/13/11 @ 2pm \n",
+    "file = \"AFR_PPP_2015_adj_v2.tif\"\n",
+    "africa1k_2015 = rasterio.open(infilepath+file) #<----- changes to 2020 18/13/11 @ 2pm \n",
     "print(africa1k_2000.meta)\n",
     "\n",
-    "africa1k_2020 = rasterio.open(infilepath+\"AFR_PPP_2020_adj_v2.tif\") #<----- changes to 2020 18/13/11 @ 2pm \n",
-    "print(africa1k_2000.meta)"
+    "# africa1k_2020 = rasterio.open(infilepath+\"AFR_PPP_2020_adj_v2.tif\") #<----- changes to 2020 18/13/11 @ 2pm \n",
+    "# print(africa1k_2000.meta)"
    ]
   },
   {
@@ -121,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -157,11 +177,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask, geom, poly = raster_mask(africa1k_2000, 1, 600)"
+    "mask600, geom600, poly600 = raster_mask(africa1k_2015, 1, 600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask1000, geom1000, poly1000 = raster_mask(africa1k_2015, 1, 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connected Pixels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# By Ryan Avery \n",
+    "\n",
+    "import numpy as np\n",
+    "import scipy.ndimage as ndimage\n",
+    "\n",
+    "def remove_isolated_pixels(mask1, mask2, struct=np.ones((3,3))):\n",
+    "    \"\"\"\n",
+    "    Unions two binary numpy arrays of the same shape.\n",
+    "    Takes this unioned array and removes solitary pixels.\n",
+    "    Struct should be a binary 3x3 numpy array to define\n",
+    "    connectivity rule. Binary mask arrays should be the \n",
+    "    shape.\n",
+    "    \"\"\"\n",
+    "    union_arr = np.logical_or(mask1, mask2)*1\n",
+    "    id_regions, num_ids = ndimage.label(union_arr, structure=struct)\n",
+    "    id_sizes = np.array(ndimage.sum(union_arr, id_regions, range(num_ids + 1)))\n",
+    "    area_mask = (id_sizes == 1)\n",
+    "    union_arr[area_mask[id_regions]] = 0\n",
+    "    return union_arr\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_1000c600 = remove_isolated_pixels(mask1000, mask600)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write out polygone centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mask_1000c600)"
    ]
   },
   {
@@ -173,15 +272,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# kwargs = africa1k_2000.meta\n",
-    "# kwargs.update(dtype=rasterio.float32, count = 1)\n",
+    "kwargs = africa1k_2000.meta\n",
+    "kwargs.update(dtype=rasterio.float32, count = 1)\n",
     "\n",
-    "# with rasterio.open(infilepath+'africa1k_2020_mask600.tif', 'w', **kwargs) as dst:\n",
-    "#         dst.write_band(1, new_mask.astype(rasterio.float32))\n"
+    "with rasterio.open(infilepath+'africa1k_2015_mask_1000c600.tif', 'w', **kwargs) as dst:\n",
+    "         dst.write_band(1, mask_1000c600.astype(rasterio.float32))\n"
    ]
   },
   {
