--- a/notebooks/jupyter/Raster_Mask.ipynb
+++ b/notebooks/jupyter/Raster_Mask.ipynb
@@ -86,17 +86,17 @@
     "# will build out folders later\n",
     "\n",
     "# data folder git will ignore\n",
-    "infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
-    "outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
+    "# infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
+    "# outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
     "\n",
     "# Local computer \n",
-    "# infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
-    "# outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
+    "infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
+    "outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +111,8 @@
    "source": [
     "# Need to build function to loop through files\n",
     "\n",
-    "file = \"AFR_PPP_2015_adj_v2.tif\"\n",
-    "africa1k_2015 = rasterio.open(infilepath+file) #<----- changes to 2020 18/13/11 @ 2pm \n",
+    "file = \"AFR_PPP_2000_adj_v2.tif\"\n",
+    "africa1k_2000 = rasterio.open(infilepath+file) #<----- changes to 2020 18/13/11 @ 2pm \n",
     "print(africa1k_2000.meta)\n",
     "\n",
     "# africa1k_2020 = rasterio.open(infilepath+\"AFR_PPP_2020_adj_v2.tif\") #<----- changes to 2020 18/13/11 @ 2pm \n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,11 +186,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mask1000, geom1000, poly1000 = raster_mask(africa1k_2015, 1, 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Can we make Africa\n",
+    "# mask, geom, poly = raster_mask(africa1k_2000, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poly.to_file(outfilepath+'WPafrica1k_2000_footprint.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -202,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,20 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(mask_1000c600)"
    ]
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +869,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -875,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
