--- a/notebooks/jupyter/OSM_Raster_PolyPoints.ipynb
+++ b/notebooks/jupyter/OSM_Raster_PolyPoints.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,8 @@
     "from shapely.geometry import Polygon\n",
     "from shapely.geometry import shape\n",
     "import ast\n",
-    "from shapely.geometry import mapping"
+    "from shapely.geometry import mapping\n",
+    "import rasterio"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +191,40 @@
    ],
    "source": [
     "osm_point_gdf.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rasterio import features as features\n",
+    "\n",
+    "with rasterio.open(infilepath+'africa1k_2000_mask_1000c600.tif') as dataset:\n",
+    "\n",
+    "     # Read the dataset's valid data mask as a ndarray.\n",
+    "     mask = dataset.read(1)\n",
+    "\n",
+    "     # Extract feature shapes and values from the array.\n",
+    "     for geom, val in rasterio.features.shapes(\n",
+    "             mask, transform=dataset.transform):\n",
+    "\n",
+    "         # Transform shapes from the dataset's own coordinate\n",
+    "         # reference system to CRS84 (EPSG:4326).\n",
+    "         geom = rasterio.warp.transform_geom(dataset.crs, 'EPSG:4326', geom, precision=6) # WGS84 (EPSG 4326)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Polygon(geom['coordinates'][0])\n",
+    "geo_df = gpd.GeoDataFrame()\n",
+    "for i, poly in enumerate(geom['coordinates']):\n",
+    "         geo_df.loc[i,'geometry']= Polygon(poly)"
    ]
   },
   {
