--- a/notebooks/jupyter/Raster_Mask.ipynb
+++ b/notebooks/jupyter/Raster_Mask.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,19 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# will build out folders later\n",
     "\n",
     "# data folder git will ignore\n",
-    "# infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
-    "# outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
+    "infilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/data/\" # git will ignore\n",
+    "outfilepath = \"/home/cascade/tana-crunch-cascade/projects/NTL/temp_data/\" # git will not ignore - NO BIG FILES \n",
     "\n",
     "# Local computer \n",
-    "infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
-    "outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
+    "# infilepath = '/Users/cascade/Github/NTL/data/raw/worldpop/Africa-1km-Population/'\n",
+    "# outfilepath = '/Users/cascade/Github/NTL/temp_data/'"
    ]
   },
   {
@@ -158,7 +158,7 @@
     "        geom = rasterio.warp.transform_geom(raster.crs, 'EPSG:4326', geom, precision=6) # WGS84 (EPSG 4326)\n",
     "    \n",
     "    # turn geom into Polygon object from shapely    \n",
-    "    Polygon(geom['coordinates'][0])\n",
+    "    # Polygon(geom['coordinates'][0])\n",
     "    poly_gdf = gpd.GeoDataFrame()\n",
     "    for i, poly in enumerate(geom['coordinates']):\n",
     "        poly_gdf.loc[i,'geometry']= Polygon(poly)\n",
@@ -250,16 +250,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Write out polygone centroids"
+    "### Write out polygons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(mask_1000c600)"
+    "# Let's try to make polygons\n",
+    "\n",
+    "def raster_poly(raster, band):\n",
+    "    \"\"\"Fucntion makes ploygons for of raster returns dict of polygons\"\"\"\n",
+    "\n",
+    "    mask = raster.read(band)\n",
+    "    \n",
+    "    # Extract feature shapes and values from the array.\n",
+    "    for geom, val in rasterio.features.shapes(mask, transform=raster.transform):\n",
+    "        \n",
+    "        # Transform shapes from the dataset's own coordinate\n",
+    "        # reference system to CRS84 (EPSG:4326).\n",
+    "        geom = rasterio.warp.transform_geom(raster.crs, 'EPSG:4326', geom, precision=6) # WGS84 (EPSG 4326)\n",
+    "    \n",
+    "    # turn geom into Polygon object from shapely    \n",
+    "    # Polygon(geom['coordinates'][0])\n",
+    "    poly_gdf = gpd.GeoDataFrame()\n",
+    "    for i, poly in enumerate(geom['coordinates']):\n",
+    "        poly_gdf.loc[i,'geometry']= Polygon(poly)\n",
+    "\n",
+    "    return poly_gdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test = rasterio.open(infilepath+'africa1k_2015_mask_1000c600.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test_poly.to_file(outfilepath+'20181130_africa1k_2015_mask_1000c600_poly.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -860,7 +898,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -874,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
